@@ -6,6 +6,7 @@
         Add GModelSpatialRadialProfile and GModelSpatialRadialProfileGauss classes (#1520)
         Make GFilename::is_fits thread safe (#1717).
         Improve exception message in GModelSpatialDiffuseCube::mc (#1915)
+        Use $GAMMALIB instead of prefix in setup script (#1929)
         Reduce length of LAT response filenames by unzipping a number of energy dispersion files (#1931)
         Skip zero livetime observations in stacked cubes for CTA (#1920)
         Correct handling of time references in GGti::extend() method (#1922)
